# test-cloudrun-gcs-mount

./: README.md  pyproject.toml
cloudrun/: deploy.sh
cloudrun/src/: main.py  requirements.txt
data/: users.csv
src/: .dockerignore  Dockerfile  deploy.sh  main.py  requirements.txt
