[tool.poetry]
name = "testcloutrungcsmount"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
Flask = "^3.0.3"
google-cloud-bigquery = "^3.25.0"
pandas = "^2.2.2"
db-dtypes = "^1.3.0"
google-cloud-bigquery-storage = "^2.26.0"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
